RSMS-1013, RSMS-1090: Add z-index to sticky table headers to prevent items from floating over stuck header

--- a/rsms/src/stylesheets/style.css
+++ b/rsms/src/stylesheets/style.css
@@ -3833,6 +3833,8 @@ tbody tr:hover{/* background:#BDC3C7; */color: #FFFFFF !important;}
 /* Sticky table headers */
 table.sticky-headers thead tr th {
   position: sticky;
+  z-index: 1;
+
   background-color: #fff;
 }
 
